--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="javascript.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="squareContainer"></div>
+    <h1>Etch-a-Sketch</h1>
+    <button id="size">SIZE</button>
+
+    <div class="container"></div>
+
+    <button>RESET</button>
     
 </body>
 </html>
