--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Etch-a-Sketch</h1>
-    <button id="size">SIZE</button>
+    <div id="main">
+        <h1>Etch-a-Sketch</h1>
+        <button id="size">SIZE</button>
 
-    <div class="container"></div>
+        <div class="container"></div>
 
-    <button id="reset">RESET</button>
+        <div id="buttons">
+            <button id="reset">RESET</button>
+            <button class="red">RED</button>
+            <button class="blue">BLUE</button>
+            <button class="green">GREEN</button>
+            <button class="rainbow">RAINBOW</button>
+        </div> 
+    </div>
     
 </body>
 </html>
